<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">É Peixe Hoje?</string>
    <string name="action_settings">Configurações</string>
    <string name="action_update">Atualizar</string>
    <string name="action_about">Sobre</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="hoje">Hoje</string>
    <string name="semana">Semana</string>

    <string name="cardapio_atualizado">Cardápio Atualizado</string>

    <string name="versao">Versão: </string>

    <string name="developed_by">Desenvolvido por:</string>
    <string name="developer_name">Erick Pires</string>

    <string name="icon_by">Ícone por:</string>
    <string name="icon_designer_name">Alex Pronsky</string>

    <string name="show">Exibir</string>
    <string name="lunch_only">Apenas almoço</string>
    <string name="dinner_only">Apenas jantar</string>
    <string name="both_meals">Ambas refeições</string>

    <string name="negative_words">O que não gosto</string>
    <string name="positive_words">O que gosto</string>

    <string name="receive_notifications">Receber notificações</string>
    
    <string name="lunch_notification">Notificação de almoço</string>
    <string name="dinner_notification">Notificação de jantar</string>
    
    <string name="notify">Notificar</string>
    <string name="always">Sempre</string>
    <string name="only_if_I_like">Somente quando eu gostar</string>
    <string name="only_if_I_dislike">Somente quando eu não gostar</string>
    <string name="never">Nunca</string>

    <string name="new_word">Nova palavra</string>

    <string name="entrada">Entrada: </string>
    <string name="guarnicao">Guarnição: </string>
    <string name="prato_principal">Prato Principal: </string>
    <string name="vegetariano">Prato Vegetariano: </string>
    <string name="acompanhamento">Acompanhamento: </string>
    <string name="sobremesa">Sobremesa: </string>
    <string name="refresco">Refresco: </string>


    <string name="no_connection">Não conectado!</string>

    <string-array name="days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="meals_array">
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

    <string name="title_activity_about">Sobre</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="meal_notification_title_template">Meal: %1$s</string>
    <string name="meal_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>

</resources>
